# file_watcher

./: Cargo.toml
common/: Cargo.toml
common/src/: app_paths.rs  config.rs  lib.rs
common/src/config/: file_handling_config.rs
gui/: Cargo.toml
gui/src/: app.rs  main.rs
service/: Cargo.toml
service/src/: app.rs  config.rs  history_manager.rs  main.rs
service/src/app/: handle_files.rs  monitor_config.rs  monitor_folders.rs
src/: app.rs  config.rs  main.rs
src/app/: handle_files.rs  history_manager.rs  monitor_config.rs  monitor_folders.rs
