[package]
name = "file-watcher"
version = "0.1.0"
edition = "2024"
authors = ["amk319"]

[dependencies]
anyhow = "1.0.102"
confy = "2.0.0"
crossbeam-channel = "0.5.15"
directories = "6.0.0"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
