[package]
name = "gui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[profile.release]
panic = "abort"

[dependencies]
common = { path = "../common" }

iced = "0.14.0"
serde = "1.0.228"
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
